--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -11,7 +11,7 @@
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
   <div class="container-flow">
-  <div class="mb-3 row">
+  <div class="mb-1 row">
             <div class="col-lg-1 text-right">
                  <label for="OrderDate" class="col-form-label"  style="font-size:8px;">Order Date:</label>
             </div>
@@ -36,12 +36,12 @@
             <div class="col-lg-1 p-0">
                 <select class="form-control" style="font-size:8px;" id="orderSourceDropdown" name="orderSourceDropdown"></select>
             </div>
-            <div class="col-lg-1 form-group text-right">
-                <label for="FulfilledCheckbox"class="checkbox-inline" style="font-size:8px;">Fulfilled:</label>
+            <div class="col-lg-1 text-right">
+                <label for="FulfilledCheckbox"class="form-check-inline" style="font-size:8px;">Fulfilled:</label>
                 <input id="FulfilledCheckbox" type="checkbox" style="font-size:8px;" value="FulfilledCheckbox">
             </div>
-            <div class="col-lg-1 form-group text-right">
-                <label for="PendingCheckbox" class="checkbox-inline" style="font-size:8px;">Pending:</label> 
+            <div class="col-lg-1 text-right">
+                <label for="PendingCheckbox" class="form-check-inline" style="font-size:8px;">Pending:</label> 
                 <input id="PendingCheckbox"type="checkbox" style="font-size:8px;" value="PendingCheckbox">
             </div>
              <div class="col-lg-1"></div>
