--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
                                  <a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="Customers" asp-action="Index">Customer</a>
+                                 <a class="dropdown-item" asp-area="" asp-controller="InvAdjTest" asp-action="Index">Inventory Adjustment Test</a>
                             </div>
                          </li> 
                         <li class="nav-item">
