--- a/Views/invAdjTest/Index.cshtml
+++ b/Views/invAdjTest/Index.cshtml
@@ -2,14 +2,14 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "saDamageRecoup";
+    ViewData["Title"] = "invAdjTest";
 }
 
 <div class="text-center">
-    <h4 class="display-5">Stock Adjustment-Damage/Recoup</h4>
+    <h4 class="display-5">Inventory Adjustment</h4>
 </div>
 <fieldset class="scheduler-border">
- <div class="mb-1 row">
+ <div class="mb-3 row">
     <div class="col-lg-1">
           <label for="date" class="col-form-label" style="font-size:8px;">Transaction Date:</label>
     </div>
@@ -23,32 +23,32 @@
         <div class="col-lg-5 p-0">
           <input type="text"  style="font-size:8px;" class="form-control" id="comments" name="comments"/>
         </div>
-        <div class="col-lg-1"></div>
+        <div class="col-lg-2"></div>
         <div class="col-lg-1 text-right"> 
           <label for="saCode"  class="col-form-label" style="font-size:8px;">SA Code:</label>
         </div>
         <div class="col-lg-1 p-0">
           <input type="text" style="font-size:8px; border-radius: 0 !important" class="form-control" id="saCode" readonly/>
         </div>
-        <div class="col-lg-1 text-right">
-          <button class="btn btn-outline-secondary" style="font-size:8px;" id="save" type="button">Save</button>  
-        </div> 
    </div>
 </fieldset>
 
-<table id="saDamageRecoup"></table>
+<table id="invAdjTest"></table>
 <div id="jqGridPager"></div>
 @section scripts {
 
 <script type="text/javascript">
 
     $.jgrid.defaults.styleUI = 'Bootstrap';
+     $.jgrid.defaults.responsive = true;
     var header = false;
     var curRowId = -1;
-    var name ="";
+    var name;
+    var notes="";
+    var  currentDate="";
     $(document).ready(function() {
-       $("#saDamageRecoup").jqGrid({
-               url: 'SaDamageRecoup/GetAll',
+       $("#invAdjTest").jqGrid({
+               url: 'InvAdjTest/GetAll',
                mtype: "GET",
                guiStyle: "bootstrap",
                iconSet: "fontAwesome",
@@ -72,7 +72,7 @@
                             keys: true,
                             editOptions: { },
                             addOptions: { },
-                            delOptions: { url: 'SaDamageRecoup/Delete' }
+                            delOptions: { url: 'InvAdjTest/Delete' }
                         }
                     },
                    { label: 'Inventory Tx Detail Id',name: 'inventoryTxDetailId', editable: true,hidden:true,editoptions: { readonly: 'readonly'},key: true},
@@ -82,77 +82,81 @@
                    { label: 'Product Name',name: 'productName',fixed:true,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
                     editoptions: {
                     dataInit: function(elem) {
-                    curRowId = $('#saDamageRecoup').getGridParam('selrow');
+                    curRowId = $('#invAdjTest').getGridParam('selrow');
                     $(elem).select();
                     $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
-                    $('#saDamageRecoup').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
+                    $('#invAdjTest').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
                     $('input#supplierName').val(getSupplierNames(ui.item.value));
-                    $('#saDamageRecoup').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
+                    $('#invAdjTest').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
                     $('input#productSku').val(getProductSku(ui.item.value));
-                } });   
+                    } });   
                                   }
                    }},
-                   { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
-                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, editoptions: {readonly: 'readonly'}},
-                   { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select', editrules: { required: true},editoptions:{value:getLocation()}},
+                   { label: 'Supplier',name: 'supplierName',fixed:true,width:120, editoptions: {readonly: 'readonly'}},
+                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,  editoptions: {readonly: 'readonly'}},
+                   { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
                    { label: 'Adj Amount (+/-)',name: 'amount',fixed:true,width:80,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
-                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions:{value:getReasons()}},
-                   { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
+                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true },formatter:'select', editoptions:{value:getReasons()}},
+                   { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text"}
 
                  ], 
                viewrecords: true,
                height: 500,
                rowNum: 20,
                pager: "#jqGridPager",
-               editurl: 'SaDamageRecoup/Update',              
+               editurl: 'InvAdjTest/Update', 
+               
 
            })
                
 
 
 
-           $('#saDamageRecoup').navGrid('#jqGridPager',
+           $('#invAdjTest').navGrid('#jqGridPager',
                // the buttons to appear on the toolbar of the grid
                { edit: false,add:true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
               
-               {},
+               {
+                  
+               },
                {
               zIndex:99,
               afterShowForm: function () {
               var idSelector = $.jgrid.jqID(this.p.id);
-              if(header==false) {
-              $.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
-              alert("Error: Need Header");
-              }
+              currentDate = $("#date").val().toString();
+              console.log(currentDate);
+              notes = $("#comments").val().toString();
+              //if(header==false) {
+              //$.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
+              //alert("Error: Need Header");
+              //}
               },
-              closeAfterAdd: true,
-              recreateForm: true,
-              errorTextFormat: function (data) {
-              return 'Error: ' + data.responseText
+              beforeSaveRow: function () {
+              alert('hi');
               },
-              url: "SaDamageRecoup/Add"
+              afterSubmit: function (){
+                $.getJSON('InvAdjTest/CreateSaCode', function(data) 
+                {
+                    $("#saCode").val(data);
+                });
+                $.ajaxSetup( { "async": true } );
+              },
+               closeAfterAdd: true,
+               recreateForm: true,
+               errorTextFormat: function (data) {
+                      return 'Error: ' + data.responseText
+                   },
+                   url: 'InvAdjTest/Add?data='+notes+'/'+currentDate
                });
-
+               
        });
        $(document).ready(function () {  
            $('#date').val(date());
        });
-
-       $('#saDamageRecoup').setGridWidth(parseInt($(window).width()) - 20);
-       $("#comments").on('change keyup paste', function () {
-           SearchByComments();
-       });
-       $("#date").on('change keyup paste', function () {
-           SearchByDate();
-           
-       }); 
-       $("#save").on('click', function () {
-           SaveHeader();
-        });
-        $(document).ready(function () {  
+       $(document).ready(function () {  
            $.ajax({  
                type: "GET",  
-               url: "saDamageRecoup/SaCode",  
+               url: "InvAdjTest/SaCode",  
                data: "{}",  
                success: function (data) {  
                    if(data!=null)
@@ -165,21 +169,23 @@
                }  
            });  
        });
+      
+       $('#invAdjTest').setGridWidth(parseInt($(window).width()) - 20);
 
-                      
-        function IsProduct(value,colname)
-        {
+       function IsProduct(value,colname)
+       {
            var containsProduct = false;
            $.ajaxSetup( { "async": false } );
-           $.getJSON('SaDamageRecoup/CreateProductName', function(data) 
-           {
-                if (data != null)
+           $.getJSON('InvAdjTest/CreateProductName', function(data) {
+                if (data != null) 
                 {
                     for (var i = 0; i < data.length; i++) 
                     {
-                        if(value== data[i].value)
+                        if(value== data[i].text)
                         {
+             
                             containsProduct = true;
+               
                         }
                     }
                 }//if
@@ -187,8 +193,8 @@
             });
             if(containsProduct==true)
             {
-                $.ajaxSetup( { "async": true } );
-                return [true,""];
+               $.ajaxSetup( { "async": true } );
+               return [true,""];
             }
             else
             {
@@ -196,78 +202,26 @@
                 return [false,"Please Enter Valid Product"];
             }
 
-        }
+       }
 
-        function date()
-        {
-             var date;
-             var currentDate = new Date();
-             var day = ("0" + currentDate.getDate()).slice(-2);
-             var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
-             var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
-             date = today.toString();
-             console.log(date);
-             return date;
-        }
+
+       function date()
+       {
+            var date;
+            var currentDate = new Date();
+            var day = ("0" + currentDate.getDate()).slice(-2);
+            var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
+            var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
+            date = today.toString();
+            return date;
+       }
     
-        function SaveHeader()
-        {
-            header = true;
-            var date = $("#date").val();
-            var notes = $("#comments").val();
-            $.ajaxSetup( { "async": false } );
-            $.getJSON('SaDamageRecoup/CreateHeader?data='+date+'/'+notes, function(data) 
-            {
-                $("#saCode").val(data);
-            });
-                $.ajaxSetup( { "async": true } );
-            $('#saDamageRecoup').setGridParam({ page: 1 }).trigger("reloadGrid");
-        }
-
-        function SearchByComments()
-        {
-            //  Fetch the text from our <input> control
-            var searchString = $("#comments").val();
-        
-            //  Prepare to pass a new search filter to our jqGrid
-            var f = { groupOp: "AND", rules: [] };
-
-            //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
-            //  In this example, I'm searching through the UserName column.
-
-            f.rules.push({ field: "comments", op: "cn", data: searchString });
-
-            var grid = $('#saDamageRecoup');
-            grid[0].p.search = f.rules.length > 0;
-            $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
-            grid.trigger("reloadGrid", [{ page: 1 }]);
-        }
-
-        function SearchByDate()
-        {
-            //  Fetch the text from our <input> control
-            var searchString = $("#date").val();
-        
-            //  Prepare to pass a new search filter to our jqGrid
-            var f = { groupOp: "AND", rules: [] };
-
-            //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
-            //  In this example, I'm searching through the UserName column.
-
-            f.rules.push({ field: "date", op: "cn", data: searchString });
-
-            var grid = $('#saDamageRecoup');
-            grid[0].p.search = f.rules.length > 0;
-            $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
-            grid.trigger("reloadGrid", [{ page: 1 }]);
-        }
-
 
        function getSupplierNames(value) 
        {
             var Supplier="";
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaDamageRecoup/CreateList', function(data) 
+            $.getJSON('InvAdjTest/CreateList', function(data) 
             {
                 if (data != null) 
                 {
@@ -288,7 +242,7 @@
        function getProductSku(value) 
        {
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaDamageRecoup/CreateProductSkuList', function(data) 
+            $.getJSON('InvAdjTest/CreateProductSkuList', function(data) 
             {
                 if (data != null) 
                 {
@@ -310,25 +264,26 @@
        {
                var ProductNameList= [];
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateProductName', function(data) 
+            $.getJSON('InvAdjTest/CreateProductName', function(data) 
             {
                 if (data != null) 
                 {
                     for (var i = 0; i < data.length; i++) 
                     {
-                        ProductNameList[i]=data[i].value;
+                        ProductNameList[i]=data[i].text;
                     }
                 }//if
             });
             $.ajaxSetup( { "async": true } );
+            console.log(ProductNameList);
             return ProductNameList; 
        }
 
-        function getLocation() 
-        {
+       function getLocation() 
+       {
             var LocationList= {};
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaDamageRecoup/CreateLocationList', function(data) 
+            $.getJSON('InvAdjTest/CreateLocationList', function(data) 
             {
                 if (data != null) 
                 {
@@ -337,27 +292,30 @@
                         LocationList[data[i].value]=data[i].text;
                     }
                 }//if
+
             });
             $.ajaxSetup( { "async": true } );
-            return LocationList;
-        }
+            return LocationList; 
+       }
 
-        function getReasons() 
-        {
+       function getReasons() 
+       {
             var ReasonsList= {};
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaDamageRecoup/CreateReasonsList', function(data) 
+            $.getJSON('InvAdjTest/CreateReasonsList', function(data) 
             {
-                if (data != null) 
+                if (data != null)
                 {
-                    for (var i = 0; i < data.length; i++) 
+                    for (var i = 0; i < data.length; i++)
                     {
                         ReasonsList[data[i].value]=data[i].text;
+                 
                     }
                 }//if
+
             });
             $.ajaxSetup( { "async": true } );
-            return ReasonsList;
+            return ReasonsList; 
         }
 </script>
 }
