--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@*
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -435,3 +435,6 @@
 
 </script>
 }
+
+<div>Graph API result</div>
+<div>@ViewData["GraphApiResult"]</div>
