fulfill sales edits

--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -387,7 +387,7 @@
                 { label: 'Customer Order Id',name: 'customerOrderID', hidden:true,editable: true,editoptions: { readonly: 'readonly'}},
                 { label: 'Product ID(Sku)',name: 'productSku',editoptions: { readonly: 'readonly'}},
                 { label: 'Product Desc',name: 'productDesc',editoptions: { readonly: 'readonly'}},
-                { label: 'Inventory Qty',name: '',editoptions: { readonly: 'readonly'}},
+                { label: 'Inventory Qty',name: 'stockQty',editoptions: { readonly: 'readonly'}},
                 { label: 'Qty Ordered',name: 'qtyOrdered',editoptions: { readonly: 'readonly'}},
                 { label: 'Qty Fulfilled',name: 'qtyFulfilled', editable: true,edittype:'text',editrules: {number:true}},
                 { label: 'Notes',name: 'notes', editable: true,edittype:'text'}
