--- a/Views/invAdjTest/Index.cshtml
+++ b/Views/invAdjTest/Index.cshtml
@@ -8,33 +8,47 @@
 <div class="text-center">
     <h4 class="display-5">Inventory Adjustment</h4>
 </div>
+<body>
+    <div class="container">
+        <div class="Date">
+          <label for="date" >Trans Date:</label>
+          <input type="date"id='date' name="date" />
+        </div>
+        <div class="Notes"> 
+          <label for="comments" >Notes:</label>
+          <input type="text" id="comments" name="comments"/>
+        </div>
+    </div>
+</body>
+
 <fieldset class="scheduler-border">
  <div class="mb-3 row">
-    <div class="col-lg-1">
-          <label for="date" class="col-form-label" style="font-size:8px;">Transaction Date:</label>
-    </div>
-        <div class="col-lg-1 p-0">
-          <input type="date" class="form-control"  style="font-size:8px;" id='date' name="date" />
-        </div> 
-
         <div class="col-lg-1 text-right"> 
-          <label for="comments"  class="col-form-label" style="font-size:8px;">Notes:</label>
+          <label for="comments"  class="col-form-label" style="font-size:12px;">Notes:</label>
         </div>
         <div class="col-lg-5 p-0">
-          <input type="text"  style="font-size:8px;" class="form-control" id="comments" name="comments"/>
+          <input type="text"  style="font-size:12px;" class="form-control" id="comments" name="comments"/>
         </div>
         <div class="col-lg-2"></div>
         <div class="col-lg-1 text-right"> 
-          <label for="saCode"  class="col-form-label" style="font-size:8px;">SA Code:</label>
+          <label for="saCode"  class="col-form-label" style="font-size:12px;">SA Code:</label>
         </div>
-        <div class="col-lg-1 p-0">
-          <input type="text" style="font-size:8px; border-radius: 0 !important" class="form-control" id="saCode" readonly/>
+        <div class="col-lg-1 pl-0">
+          <input type="text" style="font-size:12px; border-radius: 0 !important" class="form-control" id="saCode" readonly/>
         </div>
    </div>
 </fieldset>
-
 <table id="invAdjTest"></table>
 <div id="jqGridPager"></div>
+<fieldset class="scheduler-border">
+ <div class="mb-3 row">
+    <div class="col-lg-12">
+          <button class="btn btn-secondary btn-lg btn-block" style="font-size:12px;" id="newPage" type="button"> New Page </button>  
+    </div>
+ </div>
+</fieldset>
+
+
 @section scripts {
 
 <script type="text/javascript">
@@ -44,8 +58,6 @@
     var header = false;
     var curRowId = -1;
     var name;
-    var notes="";
-    var  currentDate="";
     $(document).ready(function() {
        $("#invAdjTest").jqGrid({
                url: 'InvAdjTest/GetAll',
@@ -82,27 +94,28 @@
                    { label: 'Product Name',name: 'productName',fixed:true,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
                     editoptions: {
                     dataInit: function(elem) {
-                    curRowId = $('#invAdjTest').getGridParam('selrow');
+                    curRowId = $('#invAdj').getGridParam('selrow');
                     $(elem).select();
                     $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
-                    $('#invAdjTest').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
+                    $('#invAdj').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
                     $('input#supplierName').val(getSupplierNames(ui.item.value));
-                    $('#invAdjTest').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
+                    $('#invAdj').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
                     $('input#productSku').val(getProductSku(ui.item.value));
                     } });   
                                   }
                    }},
-                   { label: 'Supplier',name: 'supplierName',fixed:true,width:120, editoptions: {readonly: 'readonly'}},
-                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,  editoptions: {readonly: 'readonly'}},
+                   { label: 'Supplier',name: 'supplierName',fixed:true,width:120,editable:true, editoptions: {readonly: 'readonly'}},
+                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable:true , editoptions: {readonly: 'readonly'}},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
                    { label: 'Adj Amount (+/-)',name: 'amount',fixed:true,width:80,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
                    { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true },formatter:'select', editoptions:{value:getReasons()}},
                    { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text"}
 
-                 ], 
+                 ],  
                viewrecords: true,
-               height: 500,
-               rowNum: 20,
+               height: 388.5,
+               rowHeight: 20,
+               rowNum: 15,
                pager: "#jqGridPager",
                editurl: 'InvAdjTest/Update', 
                
@@ -123,30 +136,31 @@
               zIndex:99,
               afterShowForm: function () {
               var idSelector = $.jgrid.jqID(this.p.id);
-              currentDate = $("#date").val().toString();
-              console.log(currentDate);
-              notes = $("#comments").val().toString();
               //if(header==false) {
               //$.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
               //alert("Error: Need Header");
               //}
               },
-              beforeSaveRow: function () {
-              alert('hi');
-              },
-              afterSubmit: function (){
-                $.getJSON('InvAdjTest/CreateSaCode', function(data) 
-                {
-                    $("#saCode").val(data);
+               //onclickSubmit: function (){
+               //},
+               afterSubmit:function(){
+                $.getJSON('InvAdjTest/DisplaySACode', function(data){
+                $("#saCode").val(data);
                 });
                 $.ajaxSetup( { "async": true } );
-              },
+               },
+               beforeSubmit :function (){
+               var currentDate = $("#date").val();
+               var notes = $("#comments").val();
+               $.getJSON('InvAdjTest/CreateHeader?data='+currentDate+'/'+notes, function(){});
+               $.ajaxSetup( { "async": true } );
+               },
                closeAfterAdd: true,
                recreateForm: true,
                errorTextFormat: function (data) {
                       return 'Error: ' + data.responseText
                    },
-                   url: 'InvAdjTest/Add?data='+notes+'/'+currentDate
+                   url: 'InvAdjTest/Add'
                });
                
        });
@@ -171,6 +185,10 @@
        });
       
        $('#invAdjTest').setGridWidth(parseInt($(window).width()) - 20);
+
+       $("#newPage").on('click', function () {
+           window.location.replace("InvAdjTest");
+       });
 
        function IsProduct(value,colname)
        {
@@ -217,7 +235,7 @@
        }
     
 
-       function getSupplierNames(value) 
+        function getSupplierNames(value) 
        {
             var Supplier="";
             $.ajaxSetup( { "async": false } );
