-changes to search headers of invAdj/SaDamge/SaExcise/SaInternal -changes to remove save from invAdj/SaDamage/SaExcise/SaInternal

--- a/Views/InvTxSummary/Index.cshtml
+++ b/Views/InvTxSummary/Index.cshtml
@@ -99,7 +99,7 @@
                 console.log(cellVal);
                 if(invTxType==1)
                 {
-                    window.open("InvAdjTest?SaCode="+cellVal);
+                    window.open("InvAdj?SaCode="+cellVal);
                 }
                 else if(invTxType==2)
                 {
