--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@*
+﻿
+@*@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -8,47 +9,45 @@
 <div class="text-center">
     <h4 class="display-5">Stock Adjustment-Damage/Recoup</h4>
 </div>
-<fieldset class="scheduler-border">
- <div class="mb-1 row">
-    <div class="col-lg-1">
-          <label for="date" class="col-form-label" style="font-size:8px;">Transaction Date:</label>
-    </div>
-        <div class="col-lg-1 p-0">
-          <input type="date" class="form-control"  style="font-size:8px;" id='date' name="date" />
-        </div> 
-
-        <div class="col-lg-1 text-right"> 
-          <label for="comments"  class="col-form-label" style="font-size:8px;">Notes:</label>
-        </div>
-        <div class="col-lg-5 p-0">
-          <input type="text"  style="font-size:8px;" class="form-control" id="comments" name="comments"/>
-        </div>
-        <div class="col-lg-1"></div>
-        <div class="col-lg-1 text-right"> 
-          <label for="saCode"  class="col-form-label" style="font-size:8px;">SA Code:</label>
-        </div>
-        <div class="col-lg-1 p-0">
-          <input type="text" style="font-size:8px; border-radius: 0 !important" class="form-control" id="saCode" readonly/>
-        </div>
-        <div class="col-lg-1 text-right">
-          <button class="btn btn-outline-secondary" style="font-size:8px;" id="save" type="button">Save</button>  
-        </div> 
-   </div>
-</fieldset>
-
+<body>
+  <div class="searchDate">
+      <label for="date" class="Label" >Trans Date:</label>
+      <input type="date"id='date' class="Date" name="date" />
+  </div>
+  <div class="Gap5"></div>
+  <div class="Notes"> 
+      <label for="comments" class="Label" >Notes:</label>
+      <input type="text" class="NotesInput"id="comments" name="comments"/>
+  </div>
+    <div class="Gap6"></div>
+  <div class="SaCode">
+      <label for="saCode"  class="Label">SA Code:</label>
+      <input type="text" class="SaCodeInput" id="saCode" readonly/>
+  </div>
+</body>
 <table id="saDamageRecoup"></table>
 <div id="jqGridPager"></div>
+<fieldset class="scheduler-border">
+ <div class="mb-3 row">
+    <div class="col-lg-12">
+          <button class="btn btn-secondary btn-lg btn-block" style="font-size:12px;" id="newPage" type="button"> New Page </button>  
+    </div>
+ </div>
+</fieldset>
+
+
 @section scripts {
 
 <script type="text/javascript">
 
     $.jgrid.defaults.styleUI = 'Bootstrap';
+     $.jgrid.defaults.responsive = true;
     var header = false;
     var curRowId = -1;
-    var name ="";
+    var name;
     $(document).ready(function() {
        $("#saDamageRecoup").jqGrid({
-               url: 'SaDamageRecoup/GetAll',
+               url: 'InvAdj/GetAll',
                mtype: "GET",
                guiStyle: "bootstrap",
                iconSet: "fontAwesome",
@@ -82,29 +81,31 @@
                    { label: 'Product Name',name: 'productName',fixed:true,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
                     editoptions: {
                     dataInit: function(elem) {
-                    curRowId = $('#saDamageRecoup').getGridParam('selrow');
+                    curRowId = $('#invAdj').getGridParam('selrow');
                     $(elem).select();
                     $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
                     $('#saDamageRecoup').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
                     $('input#supplierName').val(getSupplierNames(ui.item.value));
                     $('#saDamageRecoup').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
                     $('input#productSku').val(getProductSku(ui.item.value));
-                } });   
+                    } });   
                                   }
                    }},
-                   { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
-                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, editoptions: {readonly: 'readonly'}},
-                   { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select', editrules: { required: true},editoptions:{value:getLocation()}},
+                   { label: 'Supplier',name: 'supplierName',fixed:true,width:120,editable:true, editoptions: {readonly: 'readonly'}},
+                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable:true , editoptions: {readonly: 'readonly'}},
+                   { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
                    { label: 'Adj Amount (+/-)',name: 'amount',fixed:true,width:80,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
-                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions:{value:getReasons()}},
-                   { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
+                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true },formatter:'select', editoptions:{value:getReasons()}},
+                   { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text"}
 
-                 ], 
+                 ],  
                viewrecords: true,
-               height: 500,
-               rowNum: 20,
+               height: 388.5,
+               rowHeight: 20,
+               rowNum: 15,
                pager: "#jqGridPager",
-               editurl: 'SaDamageRecoup/Update',              
+               editurl: 'InvAdj/Update', 
+               
 
            })
                
@@ -115,44 +116,48 @@
                // the buttons to appear on the toolbar of the grid
                { edit: false,add:true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
               
-               {},
+               {
+                  
+               },
                {
               zIndex:99,
               afterShowForm: function () {
               var idSelector = $.jgrid.jqID(this.p.id);
-              if(header==false) {
-              $.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
-              alert("Error: Need Header");
-              }
+              //if(header==false) {
+              //$.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
+              //alert("Error: Need Header");
+              //}
               },
-              closeAfterAdd: true,
-              recreateForm: true,
-              errorTextFormat: function (data) {
-              return 'Error: ' + data.responseText
-              },
-              url: "SaDamageRecoup/Add"
+               //onclickSubmit: function (){
+               //},
+               afterSubmit:function(){
+                $.getJSON('SaDamageRecoup/DisplaySACode', function(data){
+                $("#saCode").val(data);
+                });
+                $.ajaxSetup( { "async": true } );
+               },
+               beforeSubmit :function (){
+               var currentDate = $("#date").val();
+               var notes = $("#comments").val();
+               $.getJSON('SaDamageRecoup/CreateHeader?data='+currentDate+'/'+notes, function(){});
+               $.ajaxSetup( { "async": true } );
+               },
+               closeAfterAdd: true,
+               recreateForm: true,
+               errorTextFormat: function (data) {
+                      return 'Error: ' + data.responseText
+                   },
+                   url: 'SaDamageRecoup/Add'
                });
-
+               
        });
        $(document).ready(function () {  
            $('#date').val(date());
        });
-
-       $('#saDamageRecoup').setGridWidth(parseInt($(window).width()) - 20);
-       $("#comments").on('change keyup paste', function () {
-           SearchByComments();
-       });
-       $("#date").on('change keyup paste', function () {
-           SearchByDate();
-           
-       }); 
-       $("#save").on('click', function () {
-           SaveHeader();
-        });
-        $(document).ready(function () {  
+       $(document).ready(function () {  
            $.ajax({  
                type: "GET",  
-               url: "saDamageRecoup/SaCode",  
+               url: "SaDamageRecoup/SaCode",  
                data: "{}",  
                success: function (data) {  
                    if(data!=null)
@@ -165,21 +170,27 @@
                }  
            });  
        });
+      
+       $('#saDamageRecoup').setGridWidth(parseInt($(window).width()) - 20);
 
-                      
-        function IsProduct(value,colname)
-        {
+       $("#newPage").on('click', function () {
+           window.location.replace("InvAdj");
+       });
+
+       function IsProduct(value,colname)
+       {
            var containsProduct = false;
            $.ajaxSetup( { "async": false } );
-           $.getJSON('SaDamageRecoup/CreateProductName', function(data) 
-           {
-                if (data != null)
+           $.getJSON('SaDamageRecoup/CreateProductName', function(data) {
+                if (data != null) 
                 {
                     for (var i = 0; i < data.length; i++) 
                     {
-                        if(value== data[i].value)
+                        if(value== data[i].text)
                         {
+             
                             containsProduct = true;
+               
                         }
                     }
                 }//if
@@ -187,8 +198,8 @@
             });
             if(containsProduct==true)
             {
-                $.ajaxSetup( { "async": true } );
-                return [true,""];
+               $.ajaxSetup( { "async": true } );
+               return [true,""];
             }
             else
             {
@@ -196,74 +207,22 @@
                 return [false,"Please Enter Valid Product"];
             }
 
-        }
+       }
 
-        function date()
-        {
-             var date;
-             var currentDate = new Date();
-             var day = ("0" + currentDate.getDate()).slice(-2);
-             var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
-             var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
-             date = today.toString();
-             console.log(date);
-             return date;
-        }
+
+       function date()
+       {
+            var date;
+            var currentDate = new Date();
+            var day = ("0" + currentDate.getDate()).slice(-2);
+            var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
+            var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
+            date = today.toString();
+            return date;
+       }
     
-        function SaveHeader()
-        {
-            header = true;
-            var date = $("#date").val();
-            var notes = $("#comments").val();
-            $.ajaxSetup( { "async": false } );
-            $.getJSON('SaDamageRecoup/CreateHeader?data='+date+'/'+notes, function(data) 
-            {
-                $("#saCode").val(data);
-            });
-                $.ajaxSetup( { "async": true } );
-            $('#saDamageRecoup').setGridParam({ page: 1 }).trigger("reloadGrid");
-        }
 
-        function SearchByComments()
-        {
-            //  Fetch the text from our <input> control
-            var searchString = $("#comments").val();
-        
-            //  Prepare to pass a new search filter to our jqGrid
-            var f = { groupOp: "AND", rules: [] };
-
-            //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
-            //  In this example, I'm searching through the UserName column.
-
-            f.rules.push({ field: "comments", op: "cn", data: searchString });
-
-            var grid = $('#saDamageRecoup');
-            grid[0].p.search = f.rules.length > 0;
-            $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
-            grid.trigger("reloadGrid", [{ page: 1 }]);
-        }
-
-        function SearchByDate()
-        {
-            //  Fetch the text from our <input> control
-            var searchString = $("#date").val();
-        
-            //  Prepare to pass a new search filter to our jqGrid
-            var f = { groupOp: "AND", rules: [] };
-
-            //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
-            //  In this example, I'm searching through the UserName column.
-
-            f.rules.push({ field: "date", op: "cn", data: searchString });
-
-            var grid = $('#saDamageRecoup');
-            grid[0].p.search = f.rules.length > 0;
-            $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
-            grid.trigger("reloadGrid", [{ page: 1 }]);
-        }
-
-
-       function getSupplierNames(value) 
+        function getSupplierNames(value) 
        {
             var Supplier="";
             $.ajaxSetup( { "async": false } );
@@ -310,22 +269,23 @@
        {
                var ProductNameList= [];
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateProductName', function(data) 
+            $.getJSON('SaDamageRecoup/CreateProductName', function(data) 
             {
                 if (data != null) 
                 {
                     for (var i = 0; i < data.length; i++) 
                     {
-                        ProductNameList[i]=data[i].value;
+                        ProductNameList[i]=data[i].text;
                     }
                 }//if
             });
             $.ajaxSetup( { "async": true } );
+            console.log(ProductNameList);
             return ProductNameList; 
        }
 
-        function getLocation() 
-        {
+       function getLocation() 
+       {
             var LocationList= {};
             $.ajaxSetup( { "async": false } );
             $.getJSON('SaDamageRecoup/CreateLocationList', function(data) 
@@ -337,27 +297,30 @@
                         LocationList[data[i].value]=data[i].text;
                     }
                 }//if
+
             });
             $.ajaxSetup( { "async": true } );
-            return LocationList;
-        }
+            return LocationList; 
+       }
 
-        function getReasons() 
-        {
+       function getReasons() 
+       {
             var ReasonsList= {};
             $.ajaxSetup( { "async": false } );
             $.getJSON('SaDamageRecoup/CreateReasonsList', function(data) 
             {
-                if (data != null) 
+                if (data != null)
                 {
-                    for (var i = 0; i < data.length; i++) 
+                    for (var i = 0; i < data.length; i++)
                     {
                         ReasonsList[data[i].value]=data[i].text;
+                 
                     }
                 }//if
+
             });
             $.ajaxSetup( { "async": true } );
-            return ReasonsList;
+            return ReasonsList; 
         }
 </script>
 }
