--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -8,44 +8,37 @@
 <div class="text-center">
     <h4 class="display-5">Excise Duty Paid</h4>
 </div>
-<fieldset class="scheduler-border"  style="max-height: 18rem;">
-    <div class="container-flow">
-         <div class="mb-1 row">
-        <div class="col-lg-1">
-          <label for="date"  style="font-size:8px;">Transaction Date:</label>
-        </div>
-        <div class="col-lg-1 p-0">
-          <input type="date" class="form-control"  style="font-size:8px;" id='date' name="date" />
-        </div> 
-        <div class="col-lg-1 text-right"> 
-          <label for="locationsDropdown"  class="col-form-label" style="font-size:8px;">Locations:</label>
-        </div>
-        <div class="col-lg-1 p-0">
-                 <select style="font-size:8px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
-        </div>
-        <div class="col-lg-1 text-right"> 
-          <label for="comments"  class="col-form-label" style="font-size:8px;">Notes:</label>
-        </div>
-        <div class="col-lg-3">
-          <input type="text"  style="font-size:8px;" class="form-control" id="comments" name="comments"/>
-        </div>
-        <div class="col-lg-1"></div>
-        <div class="col-lg-1 text-right"> 
-          <label for="saCode"  class="col-form-label" style="font-size:8px;">SA Code:</label>
-        </div>
-        <div class="col-lg-1 p-0">
-          <input type="text" style="font-size:8px; border-radius: 0 !important" class="form-control" id="saCode" readonly/>
-        </div>
-        <div class="col-lg-1 text-right">
-          <button class="btn btn-outline-secondary" style="font-size:8px;" id="save" type="button">Save</button>  
-        </div> 
-   </div>
+<body>
+    
+    <div class="searchDate">
+       <label for="date" class="Label" >Trans Date:</label>
+       <input type="date"id='date' class="Date" name="date"/> 
     </div>
-</fieldset>
-
-
+    <div class="Gap2"></div>
+    <div class="searchDropdown"> 
+          <label for="locationsDropdown"  class="Label">Location:</label>
+          <select class="form-control dropDownInput" id="locationsDropdown" name="locationsDropdown"></select> 
+    </div>
+    <div class="Gap2"></div>
+    <div class="Notes"> 
+      <label for="comments" class="Label" >Notes:</label>
+      <input type="text" class="NotesInput"id="comments" name="comments"/>
+  </div>
+  <div class="Gap1"></div>
+  <div class="SaCode">
+      <label for="saCode"  class="Label">SA Code:</label>
+      <input type="text" class="SaCodeInput" id="saCode" readonly/>
+  </div>
+</body>
 <table id="SaExciseDuty"></table>
 <div id="jqGridPager"></div>
+<fieldset class="scheduler-border">
+ <div class="mb-3 row">
+    <div class="col-lg-12">
+          <button class="btn btn-secondary btn-lg btn-block" style="font-size:12px;" id="newPage" type="button"> New Page </button>  
+    </div>
+ </div>
+</fieldset>
 @section scripts {
 
 <script type="text/javascript">
@@ -90,76 +83,76 @@
                    { label: 'Sa Code',name: 'saCode',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Date',name: 'date',fixed:true,hidden:true, edittype:"text",editoptions: { readonly: 'readonly'}},
                    { label: 'Product Name',name: 'productName',fixed:true,width:170 ,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
-                    editoptions: { 
-                    dataInit: function(elem) {
-                    curRowId = $('#SaExciseDuty').getGridParam('selrow');
-                    $(elem).select();
-                    $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
-                   
-                  $('#SaExciseDuty').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
-                  $('input#supplierName').val(getSupplierNames(ui.item.value));
-                  $('#SaExciseDuty').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
-                  $('input#productSku').val(getProductSku(ui.item.value));
+                   editoptions: { 
+                   dataInit: function(elem) {
+                   curRowId = $('#SaExciseDuty').getGridParam('selrow');
+                   $(elem).select();
+                   $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
+                   $('#SaExciseDuty').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
+                   $('input#supplierName').val(getSupplierNames(ui.item.value));
+                   $('#SaExciseDuty').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
+                   $('input#productSku').val(getProductSku(ui.item.value));
                     
-                } });  }
+                   } });  }
                    }},
                    { label: 'Supplier',name: 'supplierName',fixed:true,width:170 ,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
-                 //  { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
                    { label: 'Adj Amount (+/-)',name: 'amount',fixed:true,width:80,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
-                 //  { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true },formatter:'select', editoptions:{value:getReasons()}},
                    { label: 'Notes',name: 'comments',fixed:true,width:500, editable: true, edittype:"text",}
 
                  ], 
                viewrecords: true,
-               height: 500,
-               rowNum: 20,
+               height: 388.5,
+               rowHeight: 20,
+               rowNum: 15,
                pager: "#jqGridPager",
                editurl: 'SaExciseDuty/Update',              
 
            })
 
-           $('#SaExciseDuty').navGrid('#jqGridPager',
+            $('#SaExciseDuty').navGrid('#jqGridPager',
                // the buttons to appear on the toolbar of the grid
                { edit: false,add:true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
-               {},
+              
+               {
+                  
+               },
                {
               zIndex:99,
               afterShowForm: function () {
-                  var idSelector = $.jgrid.jqID(this.p.id);
-                  if(header==false) {
-                      $.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
-                      alert("Error: Need Header");
-                  }
+              var idSelector = $.jgrid.jqID(this.p.id);
+              //if(header==false) {
+              //$.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
+              //alert("Error: Need Header");
+              //}
               },
-                   closeAfterAdd: true,
-                   recreateForm: true,
-                   errorTextFormat: function (data) {
-                       return 'Error: ' + data.responseText
+               //onclickSubmit: function (){
+               //},
+               afterSubmit:function(){
+                $.getJSON('SaExciseDuty/DisplaySACode', function(data){
+                $("#saCode").val(data);
+                });
+                $.ajaxSetup( { "async": true } );
+               },
+               beforeSubmit :function (){
+               var currentDate = $("#date").val();
+               var notes = $("#comments").val();
+               var toLocation = $("#locationsDropdown").val();
+               $.getJSON('SaExciseDuty/CreateHeader?data='+currentDate+'/'+notes+'/'+toLocation, function(){});
+               $.ajaxSetup( { "async": true } );
+               },
+               closeAfterAdd: true,
+               recreateForm: true,
+               errorTextFormat: function (data) {
+                      return 'Error: ' + data.responseText
                    },
-                   url: "SaExciseDuty/Add"
+                   url: 'SaExciseDuty/Add'
                });
                
        });
-
        $(document).ready(function () {  
            $('#date').val(date());
        });
-
-       $('#SaExciseDuty').setGridWidth(parseInt($(window).width()) - 20);
-       
-       $("#comments").on('change keyup paste', function () {
-           SearchByComments();
-       });
-
-       $("#date").on('change keyup paste', function () {
-           SearchByDate();
-       });
-       
-       $("#save").on('click', function () {
-           SaveHeader();
-       });
-
        $(document).ready(function () {  
            $.ajax({  
                type: "GET",  
@@ -172,11 +165,13 @@
                       $("#saCode").val(data.sacode);
                       $("#date").val(data.date);
                       $("#comments").val(data.comments);
-                      $("#locationsDropdown").val(data.toLocation);
+                      $("#locationsDropdown").val(data.location);
                    }
                }  
            });  
        });
+      
+       $('#SaExciseDuty').setGridWidth(parseInt($(window).width()) - 20);
 
        $(document).ready(function () {  
        $.ajax({  
@@ -184,36 +179,42 @@
            url: "SaExciseDuty/CreateLocationList",  
            data: "{}",  
            success: function (data) {  
-               var s ='';
+               var s = '';  
                for (var i = 0; i < data.length; i++) {  
                    s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                }  
                $("#locationsDropdown").html(s);  
            }  
        });  
+   });
+
+       $("#newPage").on('click', function () {
+           window.location.replace("SaExciseDuty");
        });
-              
+
        function IsProduct(value,colname)
        {
-            var containsProduct = false;
-            $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateProductName', function(data) 
-            {
+           var containsProduct = false;
+           $.ajaxSetup( { "async": false } );
+           $.getJSON('SaExciseDuty/CreateProductName', function(data) {
                 if (data != null) 
                 {
                     for (var i = 0; i < data.length; i++) 
                     {
-                        if(value== data[i].value)
+                        if(value== data[i].text)
                         {
+             
                             containsProduct = true;
+               
                         }
                     }
                 }//if
+
             });
             if(containsProduct==true)
             {
-                $.ajaxSetup( { "async": true } );
-                return [true,""];
+               $.ajaxSetup( { "async": true } );
+               return [true,""];
             }
             else
             {
@@ -223,79 +224,20 @@
 
        }
 
+
        function date()
        {
-             var date;
-             var currentDate = new Date();
-             var day = ("0" + currentDate.getDate()).slice(-2);
-             var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
-             var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
-             date = today.toString();
-             return date;
+            var date;
+            var currentDate = new Date();
+            var day = ("0" + currentDate.getDate()).slice(-2);
+            var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
+            var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
+            date = today.toString();
+            return date;
        }
     
-       function SaveHeader()
-       {    
-            console.log($("#date").val());
-            var date = $("#date").val();
-            var notes = $("#comments").val();
-            var locationsDropdown= $("#locationsDropdown").val();
-            if(locationsDropdown!=-1)
-            {
-                header = true;
-                $.ajaxSetup( { "async": false } );
-                $.getJSON('SaExciseDuty/CreateHeader?data='+date+'/'+ locationsDropdown+'/'+ notes, function(data) 
-                {
-                    $("#saCode").val(data);
-                });
-                $.ajaxSetup( { "async": true } );
-            }
-            else
-            {
-                alert("Error: Enter A Location");
-            }
-            $('#SaExciseDuty').setGridParam({ page: 1 }).trigger("reloadGrid");
-        }
 
-       function SearchByComments()
-       {
-            //  Fetch the text from our <input> control
-            var searchString = $("#comments").val();
-        
-            //  Prepare to pass a new search filter to our jqGrid
-            var f = { groupOp: "AND", rules: [] };
-
-            //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
-            //  In this example, I'm searching through the UserName column.
-
-            f.rules.push({ field: "comments", op: "cn", data: searchString });
-
-            var grid = $('#SaExciseDuty');
-            grid[0].p.search = f.rules.length > 0;
-            $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
-            grid.trigger("reloadGrid", [{ page: 1 }]);
-       }
-
-       function SearchByDate()
-       {
-            //  Fetch the text from our <input> control
-            var searchString = $("#date").val();
-        
-            //  Prepare to pass a new search filter to our jqGrid
-            var f = { groupOp: "AND", rules: [] };
-
-            //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
-            //  In this example, I'm searching through the UserName column.
-
-            f.rules.push({ field: "date", op: "cn", data: searchString });
-
-            var grid = $('#SaExciseDuty');
-            grid[0].p.search = f.rules.length > 0;
-            $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
-            grid.trigger("reloadGrid", [{ page: 1 }]);
-       }
-
-       function getSupplierNames(value) 
+        function getSupplierNames(value) 
        {
             var Supplier="";
             $.ajaxSetup( { "async": false } );
@@ -338,7 +280,7 @@
             return ProductSku.toString(); 
        }
 
-       function getProductName() 
+              function getProductName() 
        {
                var ProductNameList= [];
             $.ajaxSetup( { "async": false } );
@@ -348,7 +290,7 @@
                 {
                     for (var i = 0; i < data.length; i++) 
                     {
-                        ProductNameList[i]=data[i].value;
+                        ProductNameList[i]=data[i].text;
                     }
                 }//if
             });
@@ -369,9 +311,10 @@
                         LocationList[data[i].value]=data[i].text;
                     }
                 }//if
-             });
-             $.ajaxSetup( { "async": true } );
-             return LocationList; 
+
+            });
+            $.ajaxSetup( { "async": true } );
+            return LocationList; 
        }
 
        function getReasons() 
@@ -380,16 +323,18 @@
             $.ajaxSetup( { "async": false } );
             $.getJSON('SaExciseDuty/CreateReasonsList', function(data) 
             {
-                if (data != null) 
+                if (data != null)
                 {
-                    for (var i = 0; i < data.length; i++) 
+                    for (var i = 0; i < data.length; i++)
                     {
                         ReasonsList[data[i].value]=data[i].text;
+                 
                     }
                 }//if
+
             });
             $.ajaxSetup( { "async": true } );
             return ReasonsList; 
-       }
+        }
 </script>
 }
