--- a/Views/invAdjTest/Index.cshtml
+++ b/Views/invAdjTest/Index.cshtml
@@ -9,35 +9,21 @@
     <h4 class="display-5">Inventory Adjustment</h4>
 </div>
 <body>
-    <div class="container">
-        <div class="Date">
-          <label for="date" >Trans Date:</label>
-          <input type="date"id='date' name="date" />
-        </div>
-        <div class="Notes"> 
-          <label for="comments" >Notes:</label>
-          <input type="text" id="comments" name="comments"/>
-        </div>
-    </div>
+  <div class="searchDate">
+      <label for="date" class="Label" >Trans Date:</label>
+      <input type="date"id='date' class="Date" name="date" />
+  </div>
+  <div class="Gap2"></div>
+  <div class="Notes"> 
+      <label for="comments" class="Label" >Notes:</label>
+      <input type="text" class="NotesInput"id="comments" name="comments"/>
+  </div>
+    <div class="Gap4"></div>
+  <div class="SaCode">
+      <label for="saCode"  class="Label">SA Code:</label>
+      <input type="text" class="SaCodeInput" id="saCode" readonly/>
+  </div>
 </body>
-
-<fieldset class="scheduler-border">
- <div class="mb-3 row">
-        <div class="col-lg-1 text-right"> 
-          <label for="comments"  class="col-form-label" style="font-size:12px;">Notes:</label>
-        </div>
-        <div class="col-lg-5 p-0">
-          <input type="text"  style="font-size:12px;" class="form-control" id="comments" name="comments"/>
-        </div>
-        <div class="col-lg-2"></div>
-        <div class="col-lg-1 text-right"> 
-          <label for="saCode"  class="col-form-label" style="font-size:12px;">SA Code:</label>
-        </div>
-        <div class="col-lg-1 pl-0">
-          <input type="text" style="font-size:12px; border-radius: 0 !important" class="form-control" id="saCode" readonly/>
-        </div>
-   </div>
-</fieldset>
 <table id="invAdjTest"></table>
 <div id="jqGridPager"></div>
 <fieldset class="scheduler-border">
